# git-cmake-format

./: CMakeLists.txt  FindClangFormat.cmake  git-cmake-format.py  readme.md
